--- a/angular-project/src/app/components/login/login.component.html
+++ b/angular-project/src/app/components/login/login.component.html
@@ -1,1 +1,4 @@
-<p>login works!</p>
+Username: <input type="text" name="username" [(ngModel)]="username">
+Password: <input type="password" name="password" [(ngModel)]="password">
+<button (click)="onLogging()">Login</button>
+<div *ngIf="!loginStatus && clicked">Fill all mandatory fields</div>
