Basic-login,main,userlist,footer and header styles-bootstrap

--- a/angular-project/src/app/app.component.html
+++ b/angular-project/src/app/app.component.html
@@ -1,3 +1,5 @@
-<h4>Header Component</h4>
+<app-menu></app-menu>
+
 <router-outlet></router-outlet>
-<h4>Footer Component</h4>
+
+<app-footer-comp></app-footer-comp>
