--- a/angular-project/src/app/components/main-screen/main-screen.component.html
+++ b/angular-project/src/app/components/main-screen/main-screen.component.html
@@ -1,2 +1,7 @@
-<h1>Welcome {{userName}}!!</h1>
-<a routerLink="/userManagement">Click here</a> to manage users.
+<div class="main-container">
+  <h4>Welcome!!</h4>
+  <div class="sub-container">
+    Hello {{ userName }}.. <a routerLink="/userManagement">Click here</a> to
+    manage users.
+  </div>
+</div>
