--- a/angular-project/src/app/components/menu/menu.component.html
+++ b/angular-project/src/app/components/menu/menu.component.html
@@ -1,13 +1,41 @@
 <header>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-        <div><a href="#" class="navbar-brand">Home</a></div>
-        <ul class="navbar-nav">
-            <li><a href="/landingPage/:username" class="nav-link">About</a></li>
-            <li><a href="/userManagement" class="nav-link">User Management</a></li>
-        </ul>
-        <ul class="navbar-nav navbar-collapse justify-content-end">
-            <li><a href="/login" class="nav-link">Login</a></li>
-            <li><a href="/logout" class="nav-link">Logout</a></li>
-        </ul>
-    </nav>
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <div><a routerLink="#" class="navbar-brand">Home</a></div>
+    <ul class="navbar-nav">
+      <li>
+        <a
+          *ngIf="authenticationService.isUserLoggedIn()"
+          routerLink="/landingPage/:username"
+          class="nav-link"
+          >About</a
+        >
+      </li>
+      <li>
+        <a
+          *ngIf="authenticationService.isUserLoggedIn()"
+          routerLink="/userManagement"
+          class="nav-link"
+          >User Management</a
+        >
+      </li>
+    </ul>
+    <ul class="navbar-nav navbar-collapse justify-content-end">
+      <li>
+        <a
+          *ngIf="!authenticationService.isUserLoggedIn()"
+          routerLink="/login"
+          class="nav-link"
+          >Login</a
+        >
+      </li>
+      <li>
+        <a
+          *ngIf="authenticationService.isUserLoggedIn()"
+          routerLink="/logout"
+          class="nav-link"
+          >Logout</a
+        >
+      </li>
+    </ul>
+  </nav>
 </header>
