--- a/angular-project/src/app/components/menu/menu.component.html
+++ b/angular-project/src/app/components/menu/menu.component.html
@@ -1,6 +1,8 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-    <div><a routerLink="#" class="navbar-brand">Home</a></div>
+    <div>
+      <a routerLink="/landingPage/:username" class="navbar-brand">Home</a>
+    </div>
     <ul class="navbar-nav">
       <li>
         <a
