user delete, update screen

--- a/angular-project/src/app/components/user-management/user-management.component.html
+++ b/angular-project/src/app/components/user-management/user-management.component.html
@@ -26,6 +26,9 @@
           <button (click)="deleteUser(user)" class="btn btn-warning">
             Delete
           </button>
+          <button (click)="updateUser(user)" class="btn btn-success m-left">
+            Update
+          </button>
         </td>
       </tr>
     </tbody>
