--- a/angular-project/src/app/components/user-management/user-management.component.html
+++ b/angular-project/src/app/components/user-management/user-management.component.html
@@ -33,4 +33,7 @@
       </tr>
     </tbody>
   </table>
+  <div>
+    <button (click)="addUser()" class="btn btn-success">Add</button>
+  </div>
 </div>
